<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2016 Google Inc. All Rights Reserved.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>
    <string name="app_name">Speech</string>
    <string name="permission_message">This app needs to record audio and recognize your speech.</string>
    <string name="listening">Listening…</string>
    <string name="load_file">Load file</string>


    <string name="button_send">Send</string>
    <string name="temp_speech_button">Speech 1</string>
    <string name="edit_settings_button">Edit Settings</string>
    <string name="view_past_runs_button">View Past Runs</string>
    <string name="playback_button">Playback</string>
    <string name="start_button">Start</string>
    <string name="speech_settings_title">Speech Settings</string>
    <string name="see_how_you_did">See how you did!</string>


    <string name="title_activity_new_speech">NewSpeech</string>
    <string name="enter_text">Enter Text</string>
    <string name="enter_text_hint">Enter speech here</string>
    <string name="save_button">Save</string>
    <string name="stop_recording_button">Stop</string>
    <string name="to_speech_menu_button">Back to Speech Menu</string>
    <string name="speech_performance_display">Here\'s how you did:</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_info">Info</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>

    <string name="speech_settings_max_time">Speech Length (Minutes)</string>
    <string name="speech_settings_timer_toggle">Display Timer While Recording</string>
    <string name="speech_settings_video_playback_toggle">Video Playback</string>
    <string name="view_recording_button">View Recording</string>
    <string name="to_speech_view_button">View Speech</string>
    <string name="cancel_button">Cancel</string>
    <string name="new_speech">Add a new speech</string>
    <string name="diff_view">Diff View</string>
    <string name="tutorial_intro">Welcome to Speaker Prep Pal! We are here to help you practice for your next big speech. Below is an index of all the screens you will encounter.</string>

</resources>
