<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".SpeechSettings">

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="83dp"
        android:layout_marginLeft="83dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="47dp"
        android:layout_marginRight="47dp"
        android:layout_marginBottom="73dp"
        android:onClick="goToSpeechMenu"
        android:text="@string/save_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancelButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayTimerSwitch" />

    <SeekBar
        android:id="@+id/maxTime"
        android:layout_width="104dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="222dp"
        android:layout_marginEnd="91dp"
        android:layout_marginRight="91dp"
        android:layout_marginBottom="58dp"
        android:max="60"
        app:layout_constraintBottom_toTopOf="@+id/videoPlaybackSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="156dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/speech_settings_max_time"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/maxTime"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="209dp" />

    <Switch
        android:id="@+id/videoPlaybackSwitch"
        android:layout_width="276dp"
        android:layout_height="39dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="91dp"
        android:layout_marginRight="91dp"
        android:layout_marginBottom="35dp"
        android:text="@string/speech_settings_video_playback_toggle"
        android:theme="@style/SwitchTheme"
        app:layout_constraintBottom_toTopOf="@+id/displayTimerSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxTime" />

    <Switch
        android:id="@+id/displayTimerSwitch"
        android:layout_width="276dp"
        android:layout_height="39dp"
        android:text="@string/speech_settings_timer_toggle"
        android:theme="@style/SwitchTheme"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="454dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="79dp"
        android:layout_marginRight="79dp"
        android:layout_marginBottom="74dp"
        android:onClick="goToSpeechMenu"
        android:text="@string/cancel_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/saveButton"
        app:layout_constraintTop_toBottomOf="@+id/displayTimerSwitch" />

</android.support.constraint.ConstraintLayout>