<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpeechView"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        style="@style/HeaderBar"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginBottom="157dp"
        android:elevation="4dp"

        app:popupTheme="@style/ActionBarPopupThemeOverlay"
        app:theme="@style/ActionBarThemeOverlay" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="343dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center|top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/editSettings"
            android:layout_width="276dp"
            android:layout_height="49dp"
            android:background="@drawable/border_button_dark"
            android:fontFamily="@font/raleway"
            android:onClick="goToSpeechSettings"
            android:text="@string/edit_settings_button"
            android:textStyle="bold" />

        <Button
            android:id="@+id/viewPastRecordings"
            android:layout_width="276dp"
            android:layout_height="49dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/border_button_dark"
            android:fontFamily="@font/raleway"
            android:onClick="goToPlayBack"
            android:text="@string/view_past_runs_button"
            android:textStyle="bold" />

        <Button
            android:id="@+id/viewScript"
            android:layout_width="276dp"
            android:layout_height="49dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/border_button_dark"
            android:fontFamily="@font/raleway"
            android:onClick="goToScriptView"
            android:text="View Script"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/startButton"
        android:layout_width="441dp"
        android:layout_height="61dp"

        android:layout_marginTop="8dp"
        android:background="@color/success"
        android:fontFamily="@font/raleway"
        android:onClick="goToSpeechRecord"
        android:text="@string/start_button"
        android:textColor="@color/cardview_light_background"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
